start refactor css game.html

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,11 +1,11 @@
 /********************** Only landscape for this game ***************/
 @media only screen and (orientation: portrait) {
-  /* body {
+  body {
     display: flex;
     height: 100vh;
     background-image: url(https://image.freepik.com/photos-gratuite/vieille-plaque-metal-texture-brossee-cuivre-fond-bronze_84485-6.jpg);
     background-size: cover;
-  } */
+  }
   #wrapper {
     display: none;
   }
@@ -42,189 +42,5 @@
     background-color: black;
     border: 1px solid black;
     border-radius: 5px;
-  }
-
-  /***********Anim dice********/
-  /**KEEP**/
-  .dice-d1-right {
-    animation: keepdiced1right 0.5s;
-  }
-  .dice-d2-right {
-    animation: keepdiced2right 0.5s;
-  }
-  .dice-d3-right {
-    animation: keepdiced3right 0.5s;
-  }
-  @keyframes keepdiced3right {
-    0% {
-      transform: translateZ(0px) translateX(0px) translateY(0px);
-    }
-    50% {
-      transform: translateZ(50px) translateX(50px) translateY(-50px);
-    }
-    100% {
-      transform: translateZ(0px) translateX(155px) translateY(50px);
-    }
-  }
-  @keyframes keepdiced2right {
-    0% {
-      transform: translateZ(0px) translateX(0px) translateY(0px);
-    }
-    50% {
-      transform: translateZ(50px) translateX(50px) translateY(-50px);
-    }
-    100% {
-      transform: translateZ(0px) translateX(175px) translateY(0px);
-    }
-  }
-  @keyframes keepdiced1right {
-    0% {
-      transform: translateZ(0px) translateX(0px) translateY(0px);
-    }
-    50% {
-      transform: translateZ(50px) translateX(50px) translateY(-50px);
-    }
-    100% {
-      transform: translateZ(0px) translateX(250px) translateY(-50px);
-    }
-  }
-  .dice-d1-left {
-    animation: keepdiced1left 0.5s;
-  }
-  .dice-d2-left {
-    animation: keepdiced2left 0.5s;
-  }
-  .dice-d3-left {
-    animation: keepdiced3left 0.5s;
-  }
-  @keyframes keepdiced3left {
-    0% {
-      transform: translateZ(0px) translateX(0px) translateY(0px);
-    }
-    50% {
-      transform: translateZ(50px) translateX(-50px) translateY(-50px);
-    }
-    100% {
-      transform: translateZ(0px) translateX(-250px) translateY(50px);
-    }
-  }
-  @keyframes keepdiced2left {
-    0% {
-      transform: translateZ(0px) translateX(0px) translateY(0px);
-    }
-    50% {
-      transform: translateZ(50px) translateX(-50px) translateY(0px);
-    }
-    100% {
-      transform: translateZ(0px) translateX(-175px) translateY(0px);
-    }
-  }
-  @keyframes keepdiced1left {
-    0% {
-      transform: translateZ(0px) translateX(0px) translateY(0px);
-    }
-    50% {
-      transform: translateZ(50px) translateX(-50px) translateY(-50px);
-    }
-    100% {
-      transform: translateZ(0px) translateX(-155px) translateY(-50px);
-    }
-  }
-  /**ROLL**/
-  .scene-d1,
-  .scene-d2,
-  .scene-d3 {
-    width: 34px;
-    height: 34px;
-    perspective: 200px;
-  }
-
-  .cube {
-    width: 34px;
-    height: 34px;
-    position: relative;
-    transform-style: preserve-3d;
-    transform: translateZ(-16px);
-  }
-
-  .cube.is-spinning {
-    animation: spinCube 3s infinite;
-  }
-  @keyframes spinCube {
-    0% {
-      transform: translateZ(-16px) rotateX(360deg) rotateY(360deg);
-    }
-    100% {
-      transform: translateZ(16px) rotateX(-360deg) rotateY(-360deg);
-    }
-  }
-  .cube__face {
-    position: absolute;
-    width: 34px;
-    height: 34px;
-  }
-
-  .cube__face--front {
-    background-image: url("../images/face/face1.png");
-    background-size: cover;
-  }
-  .cube__face--right {
-    background-image: url("../images/face/face2.png");
-    background-size: cover;
-  }
-  .cube__face--back {
-    background-image: url("../images/face/face3.png");
-    background-size: cover;
-  }
-  .cube__face--left {
-    background-image: url("../images/face/face4.png");
-    background-size: cover;
-  }
-  .cube__face--top {
-    background-image: url("../images/face/face5.png");
-    background-size: cover;
-  }
-  .cube__face--bottom {
-    background-image: url("../images/face/face6.png");
-    background-size: cover;
-  }
-  .cube__face--front {
-    transform: rotateY(0deg);
-  }
-  .cube__face--right {
-    transform: rotateY(90deg);
-  }
-  .cube__face--back {
-    transform: rotateY(180deg);
-  }
-  .cube__face--left {
-    transform: rotateY(-90deg);
-  }
-  .cube__face--top {
-    transform: rotateX(90deg);
-  }
-  .cube__face--bottom {
-    transform: rotateX(-90deg);
-  }
-  .cube__face--front {
-    transform: rotateY(0deg) translateZ(17px);
-  }
-  .cube__face--right {
-    transform: rotateY(90deg) translateZ(17px);
-  }
-  .cube__face--back {
-    transform: rotateY(180deg) translateZ(17px);
-  }
-  .cube__face--left {
-    transform: rotateY(-90deg) translateZ(17px);
-  }
-  .cube__face--top {
-    transform: rotateX(90deg) translateZ(17px);
-  }
-  .cube__face--bottom {
-    transform: rotateX(-90deg) translateZ(17px);
-  }
-  .cube {
-    transform: translateZ(-34px);
   }
 }
